src/SIP/Sdp.cpp
/* Generated by re2c 4.1 */
// Sdp.re — re2c source for the RFC 8866 SDP parser (issue #196).
//
// THIS FILE IS THE AUTHORITY. Sdp.cpp is generated from it and committed, so
// the firmware build never requires re2c; CI regenerates and diffs to catch
// drift. Never edit Sdp.cpp.
//
// Regenerate with EXACTLY:
//
//     re2c --no-generation-date --no-debug-info -W Sdp.re -o Sdp.cpp
//
// `--no-debug-info` is not optional and must not be removed to "get better
// diagnostics". Without it re2c emits #line directives carrying the ABSOLUTE
// path of this file, so output generated on one machine can never match output
// generated on another, and the CI drift check is red on every run forever.
// The cost is that compiler diagnostics and -fstack-usage numbers point at
// Sdp.cpp lines rather than at this file; that is the price of a reproducible
// committed artifact.
//
// re2c stamps its own version on line 1 of the output, so a version mismatch
// between a developer and CI shows up as a one-line diff at the top of the
// drift check rather than as a subtle behavioural difference buried in a DFA.
//
// ── Why re2c at all ──────────────────────────────────────────────────────────
//
// The threat model is CWE-674, the UNISOC T612 VoLTE RCE: uncontrolled
// recursion in an `a=acap` decoder, where a body of repeated `acap:1 acap:1 …`
// drove one recursion per token until the modem stack overflowed into a
// neighbouring task. re2c emits a switch/goto DFA — one function frame, fixed
// locals, no self-call and no call back into the driver. It cannot recurse, and
// that is a property of the generator rather than of anyone's discipline.
// tests/tools/check_parser_callgraph.py asserts it mechanically against the
// generated file.
//
// Every loop below is bounded by a byte count or a compile-time cap, never by
// nesting: the driver runs at most SdpLimits::kMaxLines iterations, each lexer
// advances monotonically to the end of one line, and every array is fixed. Total
// work is bounded by kMaxLines × kMaxLineBytes no matter what the bytes say.
//
// The body is NOT NUL-terminated (it is a view into a SipMessage), so the
// NUL-sentinel pattern would read past the end. Every block below uses
// `re2c:eof = 0` with an explicit YYLIMIT, which makes re2c bounds-check each
// peek.

#include "Sdp.hpp"

#include <cstring>

namespace sdp
{
namespace
{

// Which SDP line type a line starts with. RFC 8866 §5.
enum class LineTag : uint8_t
{
	V, O, S, C, T, M, A, B, K,
	Ignored,   // i= u= e= p= r= z= — legal, carried by nothing we model
	Empty,
	Unknown,   // counted, never fatal
};

// ── Lexer 1: line type ───────────────────────────────────────────────────────
//
// Matches only the two-character prefix. The remainder of the line is the
// value and is handed on as a span; there is nothing to gain from having the
// DFA walk bytes the caller already knows the extent of.
LineTag lexLineType(const char* YYCURSOR, const char* YYLIMIT)
{

{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy3;
		case 'b': goto yy4;
		case 'c': goto yy5;
		case 'e':
		case 'i':
		case 'p':
		case 'r':
		case 'u':
		case 'z': goto yy6;
		case 'k': goto yy7;
		case 'm': goto yy8;
		case 'o': goto yy9;
		case 's': goto yy10;
		case 't': goto yy11;
		case 'v': goto yy12;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy23;
			goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
	{ return LineTag::Unknown; }
yy3:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy13;
		default: goto yy2;
	}
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy14;
		default: goto yy2;
	}
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy15;
		default: goto yy2;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy16;
		default: goto yy2;
	}
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy17;
		default: goto yy2;
	}
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy18;
		default: goto yy2;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy19;
		default: goto yy2;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy20;
		default: goto yy2;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy21;
		default: goto yy2;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy22;
		default: goto yy2;
	}
yy13:
	++YYCURSOR;
	{ return LineTag::A; }
yy14:
	++YYCURSOR;
	{ return LineTag::B; }
yy15:
	++YYCURSOR;
	{ return LineTag::C; }
yy16:
	++YYCURSOR;
	{ return LineTag::Ignored; }
yy17:
	++YYCURSOR;
	{ return LineTag::K; }
yy18:
	++YYCURSOR;
	{ return LineTag::M; }
yy19:
	++YYCURSOR;
	{ return LineTag::O; }
yy20:
	++YYCURSOR;
	{ return LineTag::S; }
yy21:
	++YYCURSOR;
	{ return LineTag::T; }
yy22:
	++YYCURSOR;
	{ return LineTag::V; }
yy23:
	{ return LineTag::Empty; }
}

}

// ── Lexer 2: attribute name → kind ───────────────────────────────────────────
//
// Run on the NAME span only. Each rule re-checks that the match consumed the
// whole span, so "sendrecvX" is Other rather than Sendrecv — a prefix match
// would let a nonsense attribute silently change a stream's direction.
AttrKind lexAttrKind(const char* YYCURSOR, const char* YYLIMIT)
{
	const char* const end = YYLIMIT;
	// The keyword set has overlapping prefixes (ptime / maxptime, sendrecv /
	// sendonly), so the DFA backtracks and re2c needs a marker to rewind to.
	const char* YYMARKER = YYCURSOR;

{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 'f': goto yy27;
		case 'i': goto yy28;
		case 'm': goto yy29;
		case 'p': goto yy30;
		case 'r': goto yy31;
		case 's': goto yy32;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy80;
			goto yy25;
	}
yy25:
	++YYCURSOR;
yy26:
	{ return AttrKind::Other; }
yy27:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'm': goto yy33;
		default: goto yy26;
	}
yy28:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'n': goto yy35;
		default: goto yy26;
	}
yy29:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'a': goto yy36;
		case 'i': goto yy37;
		default: goto yy26;
	}
yy30:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 't': goto yy38;
		default: goto yy26;
	}
yy31:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'e': goto yy39;
		case 't': goto yy40;
		default: goto yy26;
	}
yy32:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'e': goto yy41;
		default: goto yy26;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy42;
		default: goto yy34;
	}
yy34:
	YYCURSOR = YYMARKER;
	goto yy26;
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy43;
		default: goto yy34;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'x': goto yy44;
		default: goto yy34;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy45;
		default: goto yy34;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy46;
		default: goto yy34;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'c': goto yy47;
		default: goto yy34;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy48;
		default: goto yy34;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy49;
		default: goto yy34;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy50;
		default: goto yy34;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'c': goto yy51;
		default: goto yy34;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy52;
		default: goto yy34;
	}
yy45:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Mid      : AttrKind::Other; }
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy53;
		default: goto yy34;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'v': goto yy54;
		default: goto yy34;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy55;
		default: goto yy34;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy56;
		default: goto yy34;
	}
yy50:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Fmtp     : AttrKind::Other; }
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy57;
		default: goto yy34;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy58;
		default: goto yy34;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy59;
		default: goto yy34;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy60;
		default: goto yy34;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy61;
		default: goto yy34;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'o': goto yy62;
		case 'r': goto yy63;
		default: goto yy34;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy64;
		default: goto yy34;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy65;
		default: goto yy34;
	}
yy59:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Ptime    : AttrKind::Other; }
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy66;
		default: goto yy34;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy67;
		default: goto yy34;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy68;
		default: goto yy34;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy69;
		default: goto yy34;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'v': goto yy70;
		default: goto yy34;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy71;
		default: goto yy34;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy72;
		default: goto yy34;
	}
yy67:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Rtpmap   : AttrKind::Other; }
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy73;
		default: goto yy34;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'c': goto yy74;
		default: goto yy34;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy75;
		default: goto yy34;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy76;
		default: goto yy34;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy77;
		default: goto yy34;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy78;
		default: goto yy34;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'v': goto yy79;
		default: goto yy34;
	}
yy75:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Inactive : AttrKind::Other; }
yy76:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Maxptime : AttrKind::Other; }
yy77:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Recvonly : AttrKind::Other; }
yy78:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Sendonly : AttrKind::Other; }
yy79:
	++YYCURSOR;
	{ return (YYCURSOR == end) ? AttrKind::Sendrecv : AttrKind::Other; }
yy80:
	{ return AttrKind::Other; }
}

}

// ── Lexer 3: leading payload type of an rtpmap/fmtp value ────────────────────
//
// "0 PCMU/8000" → 0. Returns 0xFF when the value does not begin with a 1-3
// digit number followed by a separator, which is the honest answer for a value
// we cannot attribute to a payload type.
uint8_t lexLeadingPt(const char* YYCURSOR, const char* YYLIMIT)
{
	const char* const start = YYCURSOR;
	const char* const end   = YYLIMIT;

{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy83;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy87;
			goto yy82;
	}
yy82:
	++YYCURSOR;
	{ return 0xFF; }
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy85;
		default: goto yy84;
	}
yy84:
	{
		const size_t n = static_cast<size_t>(YYCURSOR - start);
		// Must be followed by a separator or the end of the value: "1234" is not
		// payload type 123 with a stray digit.
		if (YYCURSOR != end && *YYCURSOR != ' ' && *YYCURSOR != '/' && *YYCURSOR != '\t')
		{
			return 0xFF;
		}
		unsigned v = 0;
		for (size_t i = 0; i < n; ++i) v = v * 10u + static_cast<unsigned>(start[i] - '0');
		// RFC 3550 caps the payload type at 7 bits; 0xFF is our sentinel, so a
		// value that cannot be one is reported as absent rather than truncated.
		return (v <= 127u) ? static_cast<uint8_t>(v) : 0xFF;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy86;
		default: goto yy84;
	}
yy86:
	++YYCURSOR;
	goto yy84;
yy87:
	{ return 0xFF; }
}

}

// Span covering [base, p) offsets within the whole body.
inline Span spanOf(const char* bodyBegin, const char* b, const char* e)
{
	Span s;
	s.pos = static_cast<uint32_t>(b - bodyBegin);
	s.len = static_cast<uint32_t>(e - b);
	return s;
}

// Split an a= line value into name and optional value at the FIRST ':'.
// Bounded by the span length. Not a DFA because there is nothing to recognise —
// only a delimiter to find — and a DFA here would be ceremony, not safety.
void splitAttr(const char* b, const char* e, const char*& nameEnd, const char*& valBegin)
{
	nameEnd  = e;
	valBegin = e;
	for (const char* p = b; p != e; ++p)
	{
		if (*p == ':')
		{
			nameEnd  = p;
			valBegin = p + 1;
			return;
		}
	}
}

// Parse an m= line value: <type> SP <port>[/<count>] SP <proto> (SP <fmt>)*
// One forward pass, no backtracking, bounded by the line length.
void parseMediaLine(const char* bodyBegin, const char* b, const char* e, Media& m)
{
	const char* p = b;

	auto token = [&](const char*& ts, const char*& te) {
		while (p != e && *p == ' ') ++p;
		ts = p;
		while (p != e && *p != ' ') ++p;
		te = p;
		return ts != te;
	};

	const char *ts = nullptr, *te = nullptr;

	if (token(ts, te)) m.typeName = spanOf(bodyBegin, ts, te);

	if (token(ts, te))
	{
		unsigned port = 0, count = 0;
		const char* q = ts;
		bool sawDigit = false;
		while (q != te && *q >= '0' && *q <= '9') { port = port * 10u + static_cast<unsigned>(*q - '0'); ++q; sawDigit = true; }
		if (sawDigit) m.port = (port <= 65535u) ? static_cast<uint16_t>(port) : 0;
		if (q != te && *q == '/')
		{
			++q;
			while (q != te && *q >= '0' && *q <= '9') { count = count * 10u + static_cast<unsigned>(*q - '0'); ++q; }
			if (count > 0 && count <= 255u) m.portCount = static_cast<uint8_t>(count);
		}
	}

	if (token(ts, te)) m.proto = spanOf(bodyBegin, ts, te);

	while (token(ts, te))
	{
		if (m.nFmt >= Limits::kMaxFormats)
		{
			// checkSdp() already refused a body with more <fmt> tokens than this on
			// the wire path, so reaching here means a locally built or test body.
			// Stop recording rather than overflow; the m= line span is kept intact
			// so verbatim relay is unaffected.
			break;
		}
		unsigned v = 0;
		bool numeric = true;
		for (const char* q = ts; q != te; ++q)
		{
			if (*q < '0' || *q > '9') { numeric = false; break; }
			v = v * 10u + static_cast<unsigned>(*q - '0');
		}
		if (!numeric || v > 127u)
		{
			// Preserved for relay, not answerable: choosing a payload type out of a
			// list we could not read would be a guess.
			m.malformedFmt = true;
			continue;
		}
		m.fmt[m.nFmt++] = static_cast<uint8_t>(v);
	}
}

// Append an attribute to a section, or report the cap as exceeded.
bool addAttr(Attribute* arr, uint8_t& n, unsigned cap,
	const char* bodyBegin, const char* b, const char* e)
{
	if (n >= cap) return false;   // caller turns this into a fail-closed verdict

	const char *nameEnd = nullptr, *valBegin = nullptr;
	splitAttr(b, e, nameEnd, valBegin);

	Attribute& a = arr[n];
	a.name  = spanOf(bodyBegin, b, nameEnd);
	a.value = (valBegin < e) ? spanOf(bodyBegin, valBegin, e) : Span{};

	// A name longer than the wire cap is not one we act on. checkSdp() already
	// refused it on the wire path; this is the guard for a locally routed body.
	if (static_cast<size_t>(nameEnd - b) > SdpLimits::kMaxAttrNameBytes)
	{
		a.kind = AttrKind::Other;
	}
	else
	{
		a.kind = lexAttrKind(b, nameEnd);
	}

	a.pt = 0xFF;
	if ((a.kind == AttrKind::Rtpmap || a.kind == AttrKind::Fmtp) && valBegin < e)
	{
		a.pt = lexLeadingPt(valBegin, e);
	}

	++n;
	return true;
}

}   // anonymous namespace

Verdict parse(std::string_view body, Session& out)
{
	// Reset first, unconditionally. A field present in a PREVIOUS body must never
	// survive into this one — the recycled pool-slot case, which is what makes a
	// stale model dangerous rather than merely wrong.
	out = Session{};

	const char* const begin = body.data();
	const char* const end   = begin + body.size();
	const char*       p     = begin;

	// -1 means "no m= seen yet", i.e. session level. RFC 8866 §5.7/§5.13: a c= or
	// a= line before the first m= is session-scoped; after one it belongs to that
	// section.
	int current = -1;

	unsigned lineNo = 0;
	while (p != end)
	{
		if (lineNo >= SdpLimits::kMaxLines)
		{
			return Verdict::TooManyLines;
		}
		++lineNo;
